--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
-title: razzie pancakes
+title: razzie
 author: florencio
 url: https://razzie.me/
+favicon: "./favicon.ico"
 
 remote_theme: abhinavs/moonwalk
 
