--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: razzie
 author: florencio
 url: https://razzie.me/
-favicon: "favicon.ico"
+favicon: "./favicon.png"
 
 remote_theme: abhinavs/moonwalk
 
